# kortex_synergy

./: CMakeLists.txt  LICENSE  README.md  package.xml
gazebo_world/: center_out_world.world
gazebo_world/models/: objective.config  objective.sdf
launch/: classifier_cartesian_pose_switch.launch  cmd_cartesian_pose_switch.launch  continuous_cartesian_control.launch  discrete_space_cartesian_control_sim.launch  gazebo_center_out_world.launch  keyboard_cartesian_pose_switch.launch  precoded_cartesian_pose_switch.launch
logs/: trial_data_20240820_145419.csv
msg/: CommandActionNotification.msg  MultiLabelActionNotification.msg
scripts/: ContinuousData.py  cartesian_pose_switch_keyboard.py  experiment1_control.py  experiment1_keyboard_control.py  experiment1_singleDoF.py  pose_listener.py  processor_open_ephys.py  uml.xml
scripts/testing/: cartesian_pose_switch_classifier.py  cartesian_pose_switch_cmd.py  cartesian_pose_switch_precoded.py  classified_pose_publisher.py  continuous_8DoF_control.py  discrete_8DoF_control.py  multi_label_classifier.py  plotter_open_ephys.py  pose_publisher.py  processor_open_ephys_test_falcon.py  processor_open_ephys_timed_falcon.py  processor_open_ephys_timed_zmq.py  stream_open_ephys.py
